--- a/test/fixtures/repetitive_tasks.yml
+++ b/test/fixtures/repetitive_tasks.yml
@@ -2,10 +2,10 @@
 
 one:
   name: MyString
-  interval: 1
+  interval_days: 1
   user: one
 
 two:
   name: MyString
-  interval: 1
+  interval_days: 1
   user: two
