--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,11 +1,21 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
-  email: MyString
+  name: aaaaa
+  email: aaaaaaa@example.com
   group: one
 
 two:
-  name: MyString
-  email: MyString
+  name: bbbbb
+  email: bbbbbbb@example.com
+  group: one
+
+owner:
+  name: ccccc
+  email: ccccccc@example.com
+  group: one
+
+owner2:
+  name: ddddd
+  email: dddddddd@example.com
   group: two
