controllerテストを作成
save


save


save


save


並列テストうまくいかない問題、何もしてないのに解決

--- a/test/fixtures/repetitive_task_logs.yml
+++ b/test/fixtures/repetitive_task_logs.yml
@@ -2,8 +2,8 @@
 
 today:
   date: <%= Date.today %>
-  repetitive_task: one
+  repetitive_task: done_today
 
 yesterday:
   date: <%= Date.yesterday %>
-  repetitive_task: two
+  repetitive_task: done_yesterday
