--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,28 +4,33 @@ member1_of_group1:
   name: aaaaa
   email: aaaaaaa@example.com
   remember_token: aaaaaaaaaa
+  last_check_activity_logs_at: 2020-01-01T00:00:00.000Z
   group: one
 
 member2_of_group1:
   name: bbbbb
   email: bbbbbbb@example.com
   remember_token: bbbbbbb
+  last_check_activity_logs_at: 2020-01-01T00:00:00.000Z
   group: one
 
 owner1:
   name: ccccc
   email: ccccccc@example.com
   remember_token: cccccccccccccc
+  last_check_activity_logs_at: 2020-01-01T00:00:00.000Z
   group: one
 
 owner2:
   name: ddddd
   email: dddddddd@example.com
   remember_token: ddddddddddddd
+  last_check_activity_logs_at: 2020-01-01T00:00:00.000Z
   group: two
 
 member1_of_group2:
   name: eeeee
   email: eeeeeee@example.com
   remember_token: eeeeeeeeeeeee
+  last_check_activity_logs_at: 2020-01-01T00:00:00.000Z
   group: two
