ユーザー名の文字数制限を追加

--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -39,6 +39,8 @@ Metrics/BlockLength:
 # Offense count: 2
 # Configuration parameters: CountComments, CountAsOne.
 Metrics/ClassLength:
+  Exclude:
+    - 'test/**/*'
   Max: 133
 
 # Offense count: 1
