--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 member1_of_group1:
-  name: aaaaa
+  name: <%= 'a' * 30 %>
   email: aaaaaaa@example.com
   remember_token: aaaaaaaaaa
   last_check_activity_logs_at: 2020-01-01T00:00:00.000Z
