--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -29,6 +29,8 @@ Layout/FirstHashElementIndentation:
 # Configuration parameters: IgnoredMethods, CountRepeatedAttributes.
 Metrics/AbcSize:
   Max: 18
+  Exclude:
+    - 'app/service/create_notification.rb'
 
 # Offense count: 14
 # Configuration parameters: CountComments, CountAsOne, ExcludedMethods, IgnoredMethods.
